--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,9 +1,5 @@
-<h1>New Article</h1>
+<div class="page-new">
+  <h1>New Article</h1>
 
-<%= form_for(@article) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <%= f.submit %>
-<% end %>
+  <%= render "form", article: @article %>
+</div>
